--- a/style.css
+++ b/style.css
@@ -173,3 +173,62 @@ h2 {
 }
 
 /* NEWS PAGE END  */
+
+
+/*  CONTACTS PAGE START  */
+
+#contacts_page_main section {
+	width: 1100px;
+	margin: 0 auto 30px auto;
+}
+
+#contacts_page_main section::after {
+	content: "";
+	clear: both;
+	display: block;
+}
+
+#contacts_page_main section iframe {
+	display: block;
+	width: 550px;
+	height: 420px;
+	float: left;
+}
+
+#contacts_page_main section aside {
+	width: 510px;
+	float: left;
+	border: 1px solid #000;
+	margin: 0 0 0 40px;
+	padding: 20px;
+}
+
+#contacts_page_main section aside p {
+	margin: 0;
+}
+
+#social_btns a {
+	display: block;
+	float: left;
+	margin: 0 20px 0 0;
+	background: skyblue;
+	color: #fff;
+	padding: 10px;
+	width: 50px;
+	overflow: hidden;
+	height: 50px;
+	border-radius: 50%;
+}
+
+#social_btns a:hover {
+	background: #fff;
+}
+
+#social_btns a img, #social_btns svg {
+	display: block;
+	width: 100%;
+}
+
+
+
+/*  CONTACTS PAGE END  */
